--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
               />
               <span class="language__name">JavaScript</span>
             </figure>
+            <figure class="model__language">
+              <img
+                class="model__language--img"
+                src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                alt=""
+              />
+              <span class="language__name">React</span>
+            </figure>
           </div>
         </div>
         <div class="model__half model__contact">
