Added in my new React Library project into the Project section.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/Screenshot 2024-07-01 102310.png"
+                  src="./assets/Screenshot 2024-08-16 163743.png"
                   class="project__img"
                   alt=""
                 />
@@ -216,7 +216,7 @@
                     E-comerce Project
                   </h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript
+                    HTML, CSS, JavaScript, React
                   </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -228,7 +228,7 @@
                     <a href="https://github.com/Joshua-Garn/E-Commerce" target="_blank" class="project__description--link">
                       <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://joshua-garn.github.io/E-Commerce/" target="_blank" class="project__description--link">
+                    <a href="https://library-react-project-37krqoz5i-joshua-garns-projects.vercel.app/" target="_blank" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
